Changelog
=========


1.3 (unreleased)
------------------

- Fix styles of byline viewlet.
  [mathias.leimgruber]

- Fix simpllayout left floated images.
  [mathias.leimgruber]

- Remove byline viewlet.
  [mathias.leimgruber]

- Style edit mode switcher for 5.0.
  [jone]

- Fix simplelayout icon (collabs edit/layout actions).
  [mathias.leimgruber]

- Style topic references.
  [mathias.leimgruber]

- Hide documentDescription.
  [mathias.leimgruber]

- Change item classes of CustomlistingItem, because it conflicts
  with jqueryui datetime picker.
  [mathias.leimgruber]

- Better keywordwidget styles.
  [mathias.leimgruber]

- Copy/use grid-layout definition of Plone 4.3 columns.css.
  [mathias.leimgruber]

- Add patched global_statusmessage.pt, which also renders html.
  [mathias.leimgruber]

- Hide KSS spinner.
  [jone]

- Support newest ftw.contentmenu version by moving the menu viewlet manager below the title.
  [jone]

- Remove folder contents customizations.
  [jone]

- Add Plone 4.3 compatibility, drop Plone <= 4.0
  [jone]

- IZUG4: ContentPage contentlisting styling.
  [mathias.leimgruber]

- IZUG4: manage subsite styling.
  [mathias.leimgruber]

- IZUG4: Simplelayout dropzone portlets styling.
  [mathias.leimgruber]

- GEVER: Adjust javscripts: Use $ instead of deprecated jq.
  [phgross]

- GEVER: Fixed search customizations for plone 4.2
  [phgross]

- Fix izug batching customizations for plone 4.2.
  See https://bugs.launchpad.net/zope.tales/+bug/1002242 for more infos.
  [mathias.leimgruber]

- GEVER: Added better collapsible/expanded styling for the contenttreewidget.
  [phgross]

- Add styling for new tabbedview menu to opengever profile.
  [phgross]

- Teamraum 3.0.2 style fixes.
  [mathias.leimgruber]

- GEVER: Added sprite icon for docugate action.
  [phgross]

- Fix image margin on tabbeview overview.
  [mathias.leimgruber]

- fix blog styling.
  [tschanzt]

- Fixed french livesearch legend is over searchbox in opengever.
  [Julian Infanger]
