@@ -5,6 +5,9 @@ Changelog
 1.3 (unreleased)
 ------------------
 
+- Fix mark_external_links.js (jQuery 1.7.x).
+  [mathias.leimgruber]
+
 - Fix styles of byline viewlet.
   [mathias.leimgruber]
 
